[package]
name = "focus_window"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
egui = { version = "0.19.0" }
egui_glow = { version = "0.19.0", features = ["winit"] }
egui-winit = { version = "0.19.0" }
winit = "0.27.3"

glow = "0.11"
glutin = "0.29.0"

[dependencies.windows]
version = "0.42.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]
